--- a/BlazorApp1.csproj
+++ b/BlazorApp1.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="QuestPDF" Version="2025.7.0" />
+    <PackageReference Include="Radzen.Blazor" Version="7.1.6" />
   </ItemGroup>
 
 </Project>
